; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_alsdec.c_decode_rice.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_alsdec.c_decode_rice.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @decode_rice to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @decode_rice(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @get_bits_left(i32* %8)
  %10 = load i32, i32* %4, align 4
  %11 = sub i32 %9, %10
  store i32 %11, i32* %5, align 4
  %12 = load i32*, i32** %3, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @get_unary(i32* %12, i32 0, i32 %13)
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %4, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %2
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @get_bits1(i32* %18)
  br label %26

20:                                               ; preds = %2
  %21 = load i32, i32* %6, align 4
  %22 = and i32 %21, 1
  %23 = icmp ne i32 %22, 0
  %24 = xor i1 %23, true
  %25 = zext i1 %24 to i32
  br label %26

26:                                               ; preds = %20, %17
  %27 = phi i32 [ %19, %17 ], [ %25, %20 ]
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %4, align 4
  %29 = icmp ugt i32 %28, 1
  br i1 %29, label %30, label %43

30:                                               ; preds = %26
  %31 = load i32, i32* %4, align 4
  %32 = sub i32 %31, 1
  %33 = load i32, i32* %6, align 4
  %34 = shl i32 %33, %32
  store i32 %34, i32* %6, align 4
  %35 = load i32*, i32** %3, align 8
  %36 = load i32, i32* %4, align 4
  %37 = sub i32 %36, 1
  %38 = call i64 @get_bits_long(i32* %35, i32 %37)
  %39 = load i32, i32* %6, align 4
  %40 = zext i32 %39 to i64
  %41 = add nsw i64 %40, %38
  %42 = trunc i64 %41 to i32
  store i32 %42, i32* %6, align 4
  br label %50

43:                                               ; preds = %26
  %44 = load i32, i32* %4, align 4
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %49, label %46

46:                                               ; preds = %43
  %47 = load i32, i32* %6, align 4
  %48 = lshr i32 %47, 1
  store i32 %48, i32* %6, align 4
  br label %49

49:                                               ; preds = %46, %43
  br label %50

50:                                               ; preds = %49, %30
  %51 = load i32, i32* %7, align 4
  %52 = icmp ne i32 %51, 0
  br i1 %52, label %53, label %55

53:                                               ; preds = %50
  %54 = load i32, i32* %6, align 4
  br label %58

55:                                               ; preds = %50
  %56 = load i32, i32* %6, align 4
  %57 = xor i32 %56, -1
  br label %58

58:                                               ; preds = %55, %53
  %59 = phi i32 [ %54, %53 ], [ %57, %55 ]
  ret i32 %59
}

declare dso_local i32 @get_bits_left(i32*) #1

declare dso_local i32 @get_unary(i32*, i32, i32) #1

declare dso_local i32 @get_bits1(i32*) #1

declare dso_local i64 @get_bits_long(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
